--- a/src/components/verticalCard/VerticalCard.css
+++ b/src/components/verticalCard/VerticalCard.css
@@ -1,17 +1,17 @@
-.verticalcard{
+.verticalCard{
     width: 60rem;
     height: 40rem;
     border-radius: 0.5rem;
 }
 
-.verticalcard__figure{
+.verticalCard__figure{
     height: 80%;
     width: 100%;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
 }
 
-.verticalcard__figure img{
+.verticalCard__figure img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -20,7 +20,7 @@
     border-top-right-radius: 0.5rem;
 }
 
-.verticalcard__section{
+.verticalCard__section{
     height: 20%;
     border-bottom-left-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
