--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,6 +1,6 @@
 .card{
     width: 60rem;
-    height: 40rem;
+    height: 50rem;
     border-radius: 0.5rem;
 }
 
@@ -27,4 +27,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 150% ;
 }
