--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,6 @@ html{
 
 body{
     font-family: 'Lato', sans-serif;
-    background: #FAF6F4;
+    background: #FFFFFF;
     font-size: 1.6rem;
 }
