--- a/src/components/Image/Image.css
+++ b/src/components/Image/Image.css
@@ -10,6 +10,14 @@
     display: flex;
 }
 
+.blob{
+        position: absolute;
+        z-index: -1;
+        width: 95rem;
+        top: 110rem;
+        left: 2rem;
+}
+
 .img__section__header{
     padding: 4rem;
 }
