--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 4rem;
     background: #FFFFFF;
-    position: fixed;
+    /* position: fixed;*/
     display: flex;
     justify-content: space-between;
 }
