--- a/src/components/verticalCard/VerticalCard.css
+++ b/src/components/verticalCard/VerticalCard.css
@@ -1,6 +1,6 @@
 .verticalCard{
-    width: 60rem;
-    height: 40rem;
+    width: 50rem;
+    height: 90rem;
     border-radius: 0.5rem;
 }
 
@@ -16,8 +16,8 @@
     height: 100%;
     object-fit: cover;
     background-position: center;
-    border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem 0.5rem hsl(0, 0%, 40%);
 }
 
 .verticalCard__section{
@@ -27,4 +27,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
+    flex-direction: column;
+}
+
+.verticalCard__p--dik{
+    font-weight: 200;
 }
